--- a/root.tex
+++ b/root.tex
@@ -45,7 +45,7 @@ Data-Efficient and Hardware  Decentralized Monocular Visual {SLAM}
 }
 
 
-\author{Jincheng Yu$^{1}$ and Feng Gao$^{1}$ % <-this % stops a space
+\author{Jincheng Yu$^{1}$, Feng Gao$^{1}$, Jianfei Cao$^{1}$, Zhaoliang Zhang$^{1}$ and Yu Wang$^{1}$ % <-this % stops a space
 % \thanks{*This work was not supported by any organization} % <-this % stops a space
 \thanks{$^{1}$Electronic Engineering Department,
         Tsinghua University, Beijing, China
